--- a/musicvideos.html
+++ b/musicvideos.html
@@ -4,27 +4,80 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <!-- Latest compiled and minified CSS -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+	<script type="text/javascript" src="http://code.jquery.com/jquery-latest.js"></script>
+	<!-- Optional theme -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" />
     <!--Style for Navbar and footer-->
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="styles/main.css" type="text/css">
     <!--Stlye for main page-->
-    <link rel="stylesheet" href="">
-    <title>Document</title>
+    <link rel="stylesheet" href="styles/musicvideo.css" type="text/css">
+    <title>The Monkees | Music & Videos</title>
 </head>
 <body>
-    <header>
+    <header class="header">
+        <nav class="navbar navbar-default">
+            <div class="container-fluid" id="bg-nav-color">
+                <div class="container">
+                    <!-- Brand and toggle get grouped for better mobile display -->
+                    <div class="navbar-header">
+                        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1"
+                            aria-expanded="false">
+                            <span class="sr-only">Toggle navigation</span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+                        <a class="navbar-brand" href="index.html"><img src="assets/band-assets/images/face.png" alt="The Monkees"></a>
+                    </div>
 
+                    <!-- Collect the nav links, forms, and other content for toggling -->
+                    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                        <ul class="nav navbar-nav">
+                            <li><a href="index.html">Home</a></li>
+                            <li><a href="musicvideos.html">Music & Videos</a></li>
+                            <li><a href="tour-dates.html">Tour Dates</a></li>
+                            <li><a href="news.html">News</a></li>
+                            <li><a href="gallery.html">Gallery</a></li>
+                            <li><a href="booking.html">Booking</a></li>
+                        </ul>
+                    </div><!-- /.navbar-collapse -->
+                </div>
+            </div><!-- /.container-fluid -->
+        </nav>
     </header>
-
-    <nav>
-
-    </nav>
     
     <section>
 
     </section>
 
     <footer>
-
+        <div class="container">
+                <div class="social-links">
+                    <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 ">
+                        <span class="sectionnew col-xs-12 hidden-sm hidden-md hidden-lg"></span>                        
+                        <h5 class="social-heading">Social Links</h5>
+                        <ul class="list-style">
+                            <li><a href="https://www.facebook.com/TheMonkees" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                            <li><a href="https://twitter.com/themonkees" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                            <li><a href="https://www.instagram.com/themonkees/" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+                            <li><a href="https://www.youtube.com/user/themonkees" target="_blank"><i class="fa fa-youtube" aria-hidden="true"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
+            
+            <div class="footer-logo col-xs-12 col-sm-6 col-md-6 col-lg-6">
+                <a href="index.html"><img src="assets/band-assets/images/Group 107@2x.png" alt="The Monkees | ©All Rights Reserved 2018"></a>
+            </div>            
+        </div>
     </footer>
+
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+
 </body>
 </html>
