--- a/booking.html
+++ b/booking.html
@@ -49,7 +49,27 @@
         </nav>
     </header>
     
-    <section>
+    <section class="container">
+        <h1 class="booking-heading text-style">Book The Monkees for an event</h1>
+        <form action="#" class="booking-form">
+            <input type="text" name="name" class="form-control" placeholder="Name*" required>
+            <input type="text" name="contact-number" class="form-control" placeholder="Contact Number*" required>
+            <input type="email" name="email" class="form-control" placeholder="E-mail">
+            <input type="text" name="venue" class="form-control" placeholder="Venue*" required>
+            <input type="text" name="time" class="form-control" placeholder="Time*" required>
+            <input type="date" name="date" class="form-control" placeholder="Date*" required> 
+            <select name="venue-size" id="venue-size" class="form-control venue-size" required>
+                <option value="">Please Select a Venue Size using the dropdown</option>
+                <option value="">1-100</option>
+                <option value="">101-999</option>
+                <option value="">1000-4999</option>
+                <option value="">5000-9999</option>
+                <option value="">10,000+</option>
+            </select>
+            <div style="text-align:center;">
+                <button type="submit" class="send-request text-style" name="submit">Send Request</button>
+            </div>
+        </form>
 
     </section>
 
@@ -78,6 +98,5 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-
 </body>
 </html>
