Added Badge to Music & Video page and updated CSS

--- a/musicvideos.html
+++ b/musicvideos.html
@@ -54,7 +54,7 @@
             <!--Music Video-->
             <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 music-video">
                 <span class="sectionnew col-xs-12 hidden-sm hidden-md hidden-lg"></span>
-                <h2 class="text-style text-center social-heading">New Music Video</h2>
+                <h2 class="text-center social-heading">New Music Video</h2>
 
                 <video width="100%" controls="controls">
                     <source src="assets/band-assets/video/TheMonkees.mp4" type="video/mp4">
@@ -63,9 +63,9 @@
             <!--Music Links-->
             <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 music-links">
                 <span class="sectionnew col-xs-12 hidden-sm hidden-md hidden-lg"></span>
-                <h2 class="text-style text-center social-heading">New Music</h2>    
+                <h2 class="text-center social-heading music-heading">Music</h2>    
 
-                <label>Clarksville</label>
+                <label>Clarksville <span class="badge badge-success">New!</span></label>
                 <audio class="audio" controls>
                     <source src="assets/band-assets/audio/Clarksville.mp3">
                 </audio>
