Started Tour Dates and styles - Basic layout and styles with min content

--- a/tour-dates.html
+++ b/tour-dates.html
@@ -49,7 +49,73 @@
         </nav>
     </header>
     
-    <section>
+    <section class="container">
+        <span class="sectionnew col-xs-12 hidden-sm hidden-md hidden-lg"></span>
+        <h1 class="social-heading text-center">Tour Dates</h1>
+
+        <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8 main-tour-dates">
+            <h2 class="text-center text-style">All tour dates</h2>
+            
+
+
+        </div>
+
+        <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 new-sold-tour-dates">
+            <div class="new">
+                <h2 class="text-center text-style social-heading">New Dates</h2>
+
+                <table>
+                    <tr>
+                        <th>Venue</th>
+                        <th>Date</th>
+                    </tr>
+                    <tr>
+                        <td>Theatre Severn, Shresbury</td>
+                        <td>18/07/19</td>
+                    </tr>
+                    <tr>
+                        <td>Queens Hall, Edinburght</td>
+                        <td>11/10/18</td>
+                    </tr>
+                    <tr>
+                        <td>3Arena, Dublin</td>
+                        <td>01/12/19</td>
+                    </tr>
+                </table>
+            </div>
+
+            <div class="sold-out">
+                <h2 class="text-center text-style social-heading">Sold Out Dates</h2>
+
+                <table>
+                    <tr>
+                        <th>Venue</th>
+                        <th>Date</th>
+                    </tr>
+                    <tr>
+                        <td>Ritz, Manchester</td>
+                        <td>18/05/19</td>
+                    </tr>
+                    <tr>
+                        <td>The Cavern Club, Liverpool</td>
+                        <td>30/02/19</td>
+                    </tr>
+                    <tr>
+                        <td>Town Hall, Birmingham</td>
+                        <td>12/08/19</td>
+                    </tr>
+                    <tr>
+                        <td>Royal Albert Hall, London</td>
+                        <td>27/11/19</td>
+                    </tr>
+                    <tr>
+                        <td>Music Hall, Aberdeen</td>
+                        <td>07/01/19</td>
+                    </tr>
+                </table>
+            </div>
+
+        </div>
 
     </section>
 
