--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     <source src="assets/band-assets/audio/Clarksville.mp3">
                 </audio>
             
-                <a href="musicvideos.html" class="btn-style text-style">Listen to more!</a>
+                <a href="musicvideos.html" class="btn-style text-style listen-more">Listen to more!</a>
             </div>
         </div>
         <!--New Tour Dates-->
@@ -126,9 +126,21 @@
         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 article-section">
             <span class="sectionnew col-xs-12 hidden-sm hidden-md hidden-lg"></span>
             <h3 class="social-heading text-center">About The Monkees</h3>
-            <p class="main-text">The Monkees story began in the fall of 1965, when Bob Rafelson and Bert Schneider, a pair of producers whose Raybert Productions had a deal with Columbia Pictures and their TV branch Screen Gems, came up with an idea for a television series about a rock group. Inspired by Richard Lester's groundbreaking comedies with the Beatles, A Hard Day's Night and Help!, Rafelson and Schneider imagined a situation comedy in which a four-piece band had wacky adventures every week and occasionally burst into song. The NBC television network liked the idea, and production began on The Monkees in early 1966. Don Kirshner, a music business veteran who was a top executive at Colgems Records (a label affiliated with Columbia/Screen Gems), was appointed music coordinator for the series, and Tommy Boyce and Bobby Hart, a producing and songwriting team, signed on to handle much of the day-to-day chores of creating music for the show's fictive band.</p> 
-            <img src="assets/band-assets/images/band.jpg" alt="">
-            <p class="main-text">A casting call went out for four young men to play the members of the group, and Rafelson and Schneider's choices for the roles were truly inspired. Michael Nesmith and Peter Tork were musicians with solid performing and recording experience who also had a flair for playing comedy, while Micky Dolenz and Davy Jones were primarily actors but had also dabbled in pop music and had strong vocal abilities. As the show went before the camera, Kirshner had Boyce and Hart take the four leads into the studio to begin recording the songs that would be featured on the show each week. While initially the cast was only going to provide vocals for material Boyce and Hart had already recorded, the producers were impressed enough with Nesmith's songwriting skills that they chose to use a few of his tunes and let him produce them. With this, the Monkees took their first step toward evolving into a proper, self-sufficient rock band.</p>
+            <p class="main-text">
+                The Monkees story began in the fall of 1965, when Bob Rafelson and Bert Schneider, a pair of producers whose Raybert Productions had a deal with Columbia Pictures and their TV branch Screen Gems, came up with an idea for a television series about a rock group. Inspired by Richard Lester's groundbreaking comedies with the Beatles, A Hard Day's Night and Help!, Rafelson and Schneider imagined a situation comedy in which a four-piece band had wacky adventures every week and occasionally burst into song. The NBC television network liked the idea, and production began on The Monkees in early 1966. Don Kirshner, a music business veteran who was a top executive at Colgems Records (a label affiliated with Columbia/Screen Gems), was appointed music coordinator for the series, and Tommy Boyce and Bobby Hart, a producing and songwriting team, signed on to handle much of the day-to-day chores of creating music for the show's fictive band.
+            </p> 
+            <img src="assets/band-assets/images/band.jpg" alt="The Monkees"> 
+            <p class="main-text hidden-xs">A casting call went out for four young men to play the members of the group, and
+                Rafelson and Schneider's choices for the roles were truly inspired. Michael Nesmith and Peter Tork were musicians
+                with solid performing and recording experience who also had a flair for playing comedy, while Micky Dolenz and Davy
+                Jones were primarily actors but had also dabbled in pop music and had strong vocal abilities. As the show went
+                before the camera, Kirshner had Boyce and Hart take the four leads into the studio to begin recording the songs
+                that would be featured on the show each week. While initially the cast was only going to provide vocals for
+                material Boyce and Hart had already recorded, the producers were impressed enough with Nesmith's songwriting skills
+                that they chose to use a few of his tunes and let him produce them. With this, the Monkees took their first step
+                toward evolving into a proper, self-sufficient rock band.
+            </p>
+            
         </div>
     </section>
 
