Added external site to buy tickets to show function

--- a/tour-dates.html
+++ b/tour-dates.html
@@ -63,77 +63,77 @@
                 <tr>
                     <td>Queens Hall, Edinburgh</td>
                     <td>11/10/18</td>
-                    <td><a href="#" target="_blank" class="buy-tickets">Buy Tickets</a></td>
+                    <td><a href="https://www.ticketmaster.co.uk/" target="_blank" class="buy-tickets">Buy Tickets</a></td>
                 </tr>
                 <tr>
                     <td>Audio, Glasgow</td>
                     <td>15/11/18</td>
-                    <td><a href="#" target="_blank" class="buy-tickets">Buy Tickets</a></td>
+                    <td><a href="https://www.ticketmaster.co.uk/" target="_blank" class="buy-tickets">Buy Tickets</a></td>
                 </tr>
                 <tr>
                     <td>Independent, Sunderland</td>
                     <td>1/12/18</td>
-                    <td><a href="#" target="_blank" class="buy-tickets">Buy Tickets</a></td>
+                    <td><a href="https://www.ticketmaster.co.uk/" target="_blank" class="buy-tickets">Buy Tickets</a></td>
                 </tr>
                 <tr>
                     <td>The Cluny, Newcastle</td>
                     <td>25/01/19</td>
-                    <td><a href="#" target="_blank" class="buy-tickets">Buy Tickets</a></td>
+                    <td><a href="https://www.ticketmaster.co.uk/" target="_blank" class="buy-tickets">Buy Tickets</a></td>
                 </tr>
                 <tr>
                     <td>The Georgian Theatre, Teeside</td>
                     <td>22/02/19</td>
-                    <td><a href="#" target="_blank" class="buy-tickets">Buy Tickets</a></td>
+                    <td><a href="https://www.ticketmaster.co.uk/" target="_blank" class="buy-tickets">Buy Tickets</a></td>
                 </tr>
                 <tr>
                     <td>Fibbers, York</td>
                     <td>29/03/19</td>
-                    <td><a href="#" target="_blank" class="buy-tickets">Buy Tickets</a></td>
+                    <td><a href="https://www.ticketmaster.co.uk/" target="_blank" class="buy-tickets">Buy Tickets</a></td>
                 </tr>
                 <tr>
                     <td>The Library, Leeds </td>
                     <td>09/04/19</td>
-                    <td><a href="#" target="_blank" class="buy-tickets">Buy Tickets</a></td>
+                    <td><a href="https://www.ticketmaster.co.uk/" target="_blank" class="buy-tickets">Buy Tickets</a></td>
                 </tr>
                 <tr>
                     <td>The Harley, Sheffield</td>
                     <td>11/05/19</td>
-                    <td><a href="#" target="_blank" class="buy-tickets">Buy Tickets</a></td>
+                    <td><a href="https://www.ticketmaster.co.uk/" target="_blank" class="buy-tickets">Buy Tickets</a></td>
                 </tr>
                 <tr>
                     <td>Motorpoint Arena Nottingham, Nottingham</td>
                     <td>07/06/19</td>
-                    <td><a href="#" target="_blank" class="buy-tickets">Buy Tickets</a></td>
+                    <td><a href="https://www.ticketmaster.co.uk/" target="_blank" class="buy-tickets">Buy Tickets</a></td>
                 </tr>
                 <tr>
                     <td>The Dark Horse, Birmingham</td>
                     <td>19/07/19</td>
-                    <td><a href="#" target="_blank" class="buy-tickets">Buy Tickets</a></td>
+                    <td><a href="https://www.ticketmaster.co.uk/" target="_blank" class="buy-tickets">Buy Tickets</a></td>
                 </tr>
                 <tr>
                     <td>Norwich Arts Centre, Norwich</td>
                     <td>27/08/19</td>
-                    <td><a href="#" target="_blank" class="buy-tickets">Buy Tickets</a></td>
+                    <td><a href="https://www.ticketmaster.co.uk/" target="_blank" class="buy-tickets">Buy Tickets</a></td>
                 </tr>
                 <tr>
                     <td>Jericho Tavern, Oxford</td>
                     <td>15/10/19</td>
-                    <td><a href="#" target="_blank" class="buy-tickets">Buy Tickets</a></td>
+                    <td><a href="https://www.ticketmaster.co.uk/" target="_blank" class="buy-tickets">Buy Tickets</a></td>
                 </tr>
                 <tr>
                     <td>100 Club, Westminster</td>
                     <td>25/11/19</td>
-                    <td><a href="#" target="_blank" class="buy-tickets">Buy Tickets</a></td>
+                    <td><a href="https://www.ticketmaster.co.uk/" target="_blank" class="buy-tickets">Buy Tickets</a></td>
                 </tr>
                 <tr>
                     <td>The Joiners Arms, Southampton</td>
                     <td>05/09/19</td>
-                    <td><a href="#" target="_blank" class="buy-tickets">Buy Tickets</a></td>
+                    <td><a href="https://www.ticketmaster.co.uk/" target="_blank" class="buy-tickets">Buy Tickets</a></td>
                 </tr>
                 <tr>
                     <td>3Arena, Dublin</td>
                     <td>01/12/19</td>
-                    <td><a href="#" target="_blank" class="buy-tickets">Buy Tickets</a></td>
+                    <td><a href="https://www.ticketmaster.co.uk/" target="_blank" class="buy-tickets">Buy Tickets</a></td>
                 </tr>
             </table>
 
@@ -154,17 +154,17 @@
                     <tr>
                         <td>Theatre Severn, Shrewsbury</td>
                         <td>18/07/19</td>
-                        <td><a href="#" target="_blank" class="buy-tickets">Buy Tickets</a></td>
+                        <td><a href="https://www.ticketmaster.co.uk/" target="_blank" class="buy-tickets">Buy Tickets</a></td>
                     </tr>
                     <tr>
                         <td>Queens Hall, Edinburgh</td>
                         <td>11/10/18</td>
-                        <td><a href="#" target="_blank" class="buy-tickets">Buy Tickets</a></td>
+                        <td><a href="https://www.ticketmaster.co.uk/" target="_blank" class="buy-tickets">Buy Tickets</a></td>
                     </tr>
                     <tr>
                         <td>3Arena, Dublin</td>
                         <td>01/12/19</td>
-                        <td><a href="#" target="_blank" class="buy-tickets">Buy Tickets</a></td>
+                        <td><a href="https://www.ticketmaster.co.uk/" target="_blank" class="buy-tickets">Buy Tickets</a></td>
                     </tr>
                 </table>
             </div>
