--- a/index.html
+++ b/index.html
@@ -77,17 +77,17 @@
                     <tr>
                         <td>Theatre Severn, Shresbury</td>
                         <td>18/07/19</td>
-                        <td><a href="#" class="buy-tickets">Buy Tickets</a></td>
+                        <td><a href="https://www.ticketmaster.co.uk/" class="buy-tickets">Buy Tickets</a></td>
                     </tr>
                     <tr>
                         <td>Queens Hall, Edinburght</td>
                         <td>11/10/18</td>
-                        <td><a href="#" class="buy-tickets">Buy Tickets</a></td>
+                        <td><a href="https://www.ticketmaster.co.uk/" class="buy-tickets">Buy Tickets</a></td>
                     </tr>
                     <tr>
                         <td>3Arena, Dublin</td>
                         <td>01/12/19</td>
-                        <td><a href="#" class="buy-tickets">Buy Tickets</a></td>
+                        <td><a href="https://www.ticketmaster.co.uk/" class="buy-tickets">Buy Tickets</a></td>
                     </tr>
                 </table>
             
