Fixed broken link - page was taken down on external site

--- a/news.html
+++ b/news.html
@@ -138,7 +138,7 @@
                 Free Shipping (US & Canada only)</p> <br>
                 
                 <div class="text-center">
-                    <a href="https://store.archiecomics.com/products/the-archies-4" target="_blank" class="btn text-style">You can buy it here!</a>
+                    <a href="https://www.mycomicshop.com/search?TID=237921" target="_blank" class="btn text-style">You can buy it here!</a>
                 </div>
         </div>
                
