Reformatting of HTML and CSS

--- a/booking.html
+++ b/booking.html
@@ -56,7 +56,7 @@
             <input type="email" name="email" class="form-control" placeholder="E-mail">
             <input type="text" name="venue" class="form-control" placeholder="Venue*" required>
             <input type="text" name="time" class="form-control" placeholder="Time*" required>
-            <input type="date" name="date" class="form-control" placeholder="Date*" required> 
+            <input type="date" name="date" class="form-control" required> 
             <select name="venue-size" id="venue-size" class="form-control venue-size" required>
                 <option value="">Please Select a Venue Size using the dropdown</option>
                 <option value="">1-100</option>
@@ -88,7 +88,7 @@
                 </div>
             
             <div class="footer-logo col-xs-12 col-sm-6 col-md-6 col-lg-6">
-                <a href="index.html"><img src="assets/band-assets/images/Group 107@2x.png" alt="The Monkees | ©All Rights Reserved 2018"></a>
+                <a href="index.html"><img src="assets/band-assets/images/Group_107@2x.png" alt="The Monkees | ©All Rights Reserved 2018"></a>
             </div>            
         </div>
     </footer>
