--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             <span class="sectionnew col-xs-12 hidden-sm hidden-md hidden-lg"></span>
             <h2 class="social-heading text-center">New Music Video</h2>
             
-            <video controlsList="nodownload" width="100%" controls="controls">
+            <video width="100%" controls="controls">
                 <source src="assets/band-assets/video/TheMonkees.mp4" type="video/mp4">
             </video>
 
@@ -160,7 +160,7 @@
                 </div>
             
             <div class="footer-logo col-xs-12 col-sm-6 col-md-6 col-lg-6">
-                <a href="index.html"><img src="assets/band-assets/images/Group 107@2x.png" alt="The Monkees | ©All Rights Reserved 2018"></a>
+                <a href="index.html"><img src="assets/band-assets/images/Group_107@2x.png" alt="The Monkees | ©All Rights Reserved 2018"></a>
             </div>            
         </div>
     </footer>
