--- a/musicvideos.html
+++ b/musicvideos.html
@@ -87,15 +87,15 @@
         </div>
         <div class="row album-cover-section">
             <div class="col-xs-6 col-sm-6 col-md-4 col-lg-4 album-cover">
-                <img class="album-cover" src="assets/band-assets/images/cover.jpg" alt="">
+                <img class="album-cover" src="assets/band-assets/images/cover.jpg" alt="Album Cover">
             </div>
 
             <div class="col-xs-6 col-sm-6 col-md-4 col-lg-4 album-cover">
-                <img class="album-cover" src="assets/band-assets/images/album.jpg" alt="">
+                <img class="album-cover" src="assets/band-assets/images/album.jpg" alt="Album Cover">
             </div>
 
             <div class="col-xs-6 col-sm-6 col-md-4 col-lg-4 album-cover">
-                <img class="album-cover" src="assets/band-assets/images/album2.jpg" alt="">
+                <img class="album-cover" src="assets/band-assets/images/album2.jpg" alt="Album Cover">
             </div>
         </div>
     </section>
@@ -116,7 +116,7 @@
             </div>
             
             <div class="footer-logo col-xs-12 col-sm-6 col-md-6 col-lg-6">
-                <a href="index.html"><img src="assets/band-assets/images/Group 107@2x.png" alt="The Monkees | ©All Rights Reserved 2018"></a>
+                <a href="index.html"><img src="assets/band-assets/images/Group_107@2x.png" alt="The Monkees | ©All Rights Reserved 2018"></a>
             </div>            
         </div>
     </footer>
