--- a/musicvideos.html
+++ b/musicvideos.html
@@ -116,7 +116,7 @@
             </div>
             
             <div class="footer-logo col-xs-12 col-sm-6 col-md-6 col-lg-6">
-                <a href="index.html"><img src="assets/band-assets/images/Group_107@2x.png" alt="The Monkees | ©All Rights Reserved 2018"></a>
+                <a href="index.html"><img src="assets/band-assets/images/Group 107@2x.png" alt="The Monkees | ©All Rights Reserved 2018"></a>
             </div>            
         </div>
     </footer>
